--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
-{
-    margin: 0;
+
+    body{
+      margin: 0;
       padding: 0;
       box-sizing: border-box;
-    }
-    body 
-    {
       display: flex;
       justify-content: center;
       aligin-items: center;
