--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
         {
             transform: translateX(100%);
         }
-    }.card span:nth-child(2)
+    .card span:nth-child(2)
     {
         position: absolute;
         top: 0;
