--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@
         {
             transform: translateX(100%);
         }
+    }
     .card span:nth-child(2)
     {
         position: absolute;
