--- a/style.css
+++ b/style.css
@@ -87,8 +87,8 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 3px;
+        width: 3px;
+        height: 100%;
         background: linear-gradient(to top,transparent,#14f3fd);
         animation: animate_four 2s linear infinite;
         animation-delay: 1s;
